# aesd_linux_app

./: README.md  makefile
azure/: CMakeLists.txt  Makefile  azure_app.c  azure_driver.c  azure_driver.h
iot_sensor_gui/: CMakeLists.txt  azure_driver.c  azure_driver.h  iot_sensor_gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  set_env.sh  tempSensor.cpp  tempSensor.h  tmp102.c  tmp102.h
tmp102/: Makefile  main.c  tmp102.c  tmp102.h
